* Spellcheck (Anders Jonsson)
* Tracker: keep values in artifact new submit form on error. (TrivialDev)
* Tracker: add new extrafield: text regex (TrivialDev)
* Tracker: add new extrafield: User (TrivialDev)
* Tracker: add support for mandatory fields on workflow of artifact (TrivialDev)
* Tracker: add support for description on extrafield to be used in tooltip (TrivialDev)
* Utils: cross ref document. Use [DNNN] where NNN is the ID of the document. (TrivialDev)
* Web UI: upgrade splitter jquery plugin to 0.20.0 (TrivialDev)
* Web UI: upgrade jquery ui to 1.11.4 (TrivialDev)
* Widget MySystasks: new widget for user to display systasks perform on user projects (TrivialDev)
* Widget ProjectScmStats: new widget for project to display SCM stats (TrivialDev)

FusionForge 6.0.5:
* Plugin SCM SVN: fix activity when SVN repository is private [#813] (TrivialDev)
* Plugin SCM Git: fix activity when Git repository is private [#825] (TrivialDev)
* Plugin MoinMoin: fix httpd permissions & 404 on CentOS [#809] (TrivialDev)
* Project Task: fix CSV import [#823] (Peter Katzmann)
* Project Task: fix CSV import [#823]: add missing translation, add missing category in no header import,
                fix start/end date format description (TrivialDev)
* Tracker: fix artifact deletion with votes [#819] (TrivialDev)
* Tracker: fix downloadcsv missing vote values [#828] (TrivialDev)

FusionForge 6.0.4:
* Account Management System: fix sysCreateUser for UNIX: unix_gid dropped (TrivialDev)
* Accounts: do not accept digits-only user and group names, to avoid confusion with UID/GID in system commands (Inria)
* Accounts: drop redundant (and insecure) unsalted MD5 password hashes from the database (Inria)
* Accounts: trigger system replication when user changes password or shell (Inria)
* Accounts: passwords hashes: increase md5crypt salt length to 8; fix invalid Blowfish salt (Inria)
* Accounts: passwords hashes: add support for SHA256/SHA512 (Inria)